--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.1",
     "gulp-sourcemaps": "^3.0.0",
+    "postcss-less": "^6.0.0",
     "stylelint": "^14.14.1",
     "stylelint-config-htmlacademy": "^1.1.2"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
+    "stylelint": "stylelint \"source/less/**/*.less\" --custom-syntax postcss-less",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp styles",
     "start": "gulp"
@@ -27,7 +28,15 @@
     "not dead",
     "not ie <= 11"
   ],
+  "editorconfig-cli": [
+    "*.json",
+    "*.js",
+    "source/*.html",
+    "source/js/**/*.js",
+    "source/img/**/*.svg",
+    "source/less/**/*.less"
+  ],
   "engines": {
-    "node": ">=16.17.0"
+    "node": "^16"
   }
 }
