--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "description": "Личный проект «Мишка» от HTML Academy",
   "author": "Denis Natalevich",
   "devDependencies": {
-    "@htmlacademy/editorconfig-cli": "^1.0.0",
-    "autoprefixer": "^10.4.13",
-    "browser-sync": "^2.27.10",
-    "del": "^6.1.1",
-    "gulp": "^4.0.2",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-less": "^5.0.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^9.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-svgstore": "^9.0.0",
-    "gulp-uglify-es": "^3.0.0",
-    "gulp-webp": "^4.0.1",
-    "postcss": "^8.4.19",
-    "postcss-csso": "^6.0.1",
-    "postcss-less": "^6.0.0",
-    "stylelint": "^14.14.1",
-    "stylelint-config-htmlacademy": "^1.1.2"
+    "@htmlacademy/editorconfig-cli": "1.0.0",
+    "autoprefixer": "10.4.13",
+    "browser-sync": "2.27.10",
+    "del": "6.1.1",
+    "gulp": "4.0.2",
+    "gulp-htmlmin": "5.0.1",
+    "gulp-imagemin": "7.1.0",
+    "gulp-less": "5.0.0",
+    "gulp-plumber": "1.2.1",
+    "gulp-postcss": "9.0.1",
+    "gulp-rename": "2.0.0",
+    "gulp-sourcemaps": "3.0.0",
+    "gulp-svgstore": "9.0.0",
+    "gulp-uglify-es": "3.0.0",
+    "gulp-webp": "4.0.1",
+    "postcss": "8.4.19",
+    "postcss-csso": "6.0.1",
+    "postcss-less": "6.0.0",
+    "stylelint": "14.14.1",
+    "stylelint-config-htmlacademy": "1.1.2"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
